--- a/GLP/SDL-0/SDL-0/SDL-0.vcxproj
+++ b/GLP/SDL-0/SDL-0/SDL-0.vcxproj
@@ -83,6 +83,11 @@
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="AmazingRGBFrag.shader" />
+    <None Include="SimpleFrag.shader" />
+    <None Include="SimpleVertex.shader" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
